<resources>
    <string name="ti_start">START</string>
    <string name="app_name">広がれ！</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD2NHadjkzTxKv1baYFgXubRr1ko2Eodvk</string>

    <string name="mm_start_game">ゲームスタート</string>
    <string name="mm_profile">プロフィール</string>
    <string name="mm_record">ランキング</string>
    <string name="rmn_joinRoom">ルームに参加する</string>
    <string name="rmn_makeRoom">ルームを作る</string>
    <string name="tg_roomName">ルーム名</string>
    <string name="tg_gameMode">ゲームモード</string>
    <string name="tg_battle">対戦</string>
    <string name="tg_cooperation">協力</string>
    <string name="tg_statusEffect">ステータス効果</string>
    <string name="tg_on">あり</string>
    <string name="tg_off">なし</string>
    <string name="tg_member">メンバー</string>
    <string name="tg_known">知ってる人のみ</string>
    <string name="tg_unknown">知らない人もOK</string>
    <string name="tg_make">作成する</string>
    <string name="ruleLabel">ルール</string>
    <string name="rule1">制限時間内に地図上に<br></br>大きい三角形を作る。</string>
    <string name="rule2">チーム内で描けた一番大きな<br></br>三角形を記録とする。</string>
    <string name="rule3">制限時間終了後に、プレイヤの<br></br>ステータスに応じて座標を少し<br></br>動かすことができる。</string>
    <string name="rd_ready">準備0K</string>
    <string name="rd_waiting">待機中...</string>
    <string name="pr_playerName">プレイヤ名</string>
    <string name="pr_id">ID</string>
    <string name="levelLabel">レベル</string>
    <string name="re_expLabel">経験値</string>
    <string name="re_nextLevelLabel">次のレベルまで</string>
    <string name="next">次へ</string>
    <string name="lv_textView_exp">残り経験値</string>
    <string name="decide">決定</string>
    <string name="ml_statusEffect">ステータス効果</string>
    <string name="hr_gameStart">ゲームを開始する</string>
    <string name="ge_replay">もう一度遊ぶ</string>
    <string name="ge_endGame">ゲームを終了する</string>
    <string name="tg_inputAlert">ルーム名を入力して下さい</string>
    <string name="tg_radioAlert">ボタンを全て選択して下さい</string>

    <string name="hr_gameWait">準備中...</string>
    <string name="hr_gameReady">ゲームを開始できます</string>
    <string name="ml_east">東</string>
    <string name="ml_west">西</string>
    <string name="ml_south">南</string>
    <string name="ml_north">北</string>
    <string name="ts_splitLabel">チーム分け</string>
    <string name="ts_splitExplanation">どちらかを選んで下さい</string>
    <string name="ts_limitLabel">残り回数</string>

    <string name="rl_button_search">この条件で検索</string>

    <string name="rl_checkbox_ok">知らない人\nもOK</string>
    <string name="rl_checkbox_no">知ってる人\nのみ</string>

    <string name="rl_checkbox_effectOn">効果あり</string>
    <string name="rl_checkbox_effectOff">効果なし</string>

    <string name="rl_checkbox_coop">協力</string>
    <string name="rl_checkbox_versus">対戦</string>

    <string name="rk_textview_Ranking">ランキング</string>
    <string name="rk_textview_Score">スコア</string>
    <string name="rk_textview_playcount">プレイ回数</string>
    <string name="rk_textview_count">TextView</string>
    <string name="ms_textview_gamemode">ゲームモード</string>
    <string name="ri_textview_gamemode">ゲームモード</string>
    <string name="rw_textview_gamemode">ゲームモード</string>
    <string name="ms_textview_statusEffect">ステータス効果</string>
    <string name="ri_textview_statusEffect">ステータス効果</string>
    <string name="rw_textview_statusEffect">ステータス効果</string>
    <string name="ms_textview_roomname">ルーム名</string>
    <string name="ri_textview_roomname">ルーム名</string>
    <string name="rw_textview_roomname">ルーム名</string>
    <string name="ms_textview_member">メンバー</string>
    <string name="ri_textview_member">メンバー</string>
    <string name="rw_textview_member">メンバー</string>
    <string name="ms_textview_selectgm">TextView</string>
    <string name="ms_textview_selectse">TextView</string>
    <string name="ms_textview_selectm">TextView</string>
    <string name="ri_textview_selectgm">TextView</string>
    <string name="ri_textview_selectse">TextView</string>
    <string name="ri_textview_selectm">TextView</string>
    <string name="rw_textview_selectgm">TextView</string>
    <string name="rw_textview_selectse">TextView</string>
    <string name="rw_textview_selectm">TextView</string>
    <string name="ms_textview_host">ホスト</string>
    <string name="ri_textview_host">ホスト</string>
    <string name="rw_textview_host">ホスト</string>
    <string name="rw_textview_loading">承認待ち</string>
    <string name="ri_button_quit">退出する</string>
    <string name="rw_button_quit">退出する</string>

    <string name="ms_button_decision">メンバーを確定する</string>
    <string name="tsr_textview_teamsplit">チーム分け</string>
    <string name="tsr_textview_vs">VS</string>
    <string name="tsr_button_next">次へ</string>
    <string name="ms_no_data">no data</string>
    <string name="main_button">Button</string>
    <string name="ts_alert">もう一度選んで下さい</string>
    <string name="list_rl_approval">承認</string>
    <string name="list_rl_id">id :</string>
    <string name="list_rl_name">name</string>
    <string name="ms_button_ok">承認</string>
    <string name="general_message">メッセージ</string>
    <string name="general_ok">OK</string>
    <string name="tg_dialog_coop">協力：チームで協力して、一つの大きい三角形を作るモード</string>
    <string name="tg_dialog_battle">対戦：複数のチームで、それぞれ作った三角形の大きさを競うモード</string>
    <string name="tg_dialog_effect">ゲームの最後に、指定した方角にステータスに応じた距離を移動できます</string>
    <string name="gm_no_pos">位置情報が利用できません。</string>
    <string name="gm_no_getpos">開始地点を受信できませんでした。\n再受信中...</string>
    <string name="rl_seroom">検索するルーム名を入力</string>
    <string name="ria_now">現在</string>
    <string name="rie_person_num">人</string>
    <string name="ready_warn">このゲームを遊ぶには、歩行を検知するために身体活動の権限を許可する必要があります。</string>
    <string name="ready_war_pos">このゲームを遊ぶには、位置情報の権限を許可する必要があります。</string>
    <string name="ready_war_pos_act">このゲームは位置情報と身体活動の取得を利用しないとプレイすることができません。</string>
    <string name="ready_approve">許可する</string>
    <string name="ready_cancel">キャンセル</string>
    <string name="pro_edi">編集</string>
    <string name="pro_fin_edi">編集完了</string>
    <string name="ini_reg_fail">登録に失敗しました</string>
    <string name="ini_nullid_fail">空白のIDは使えません</string>
    <string name="ini_id_no_use">IDは使えません</string>
    <string name="ini_id_can_use">IDは使えます</string>
    <string name="gm_speed">速度</string>
    <string name="gm_steps">歩数</string>
    <string name="rk_textview_b_title">ベストスコア</string>
    <string name="general_no">いいえ</string>
    <string name="ms_back_confirm">前の画面に戻るとルームが削除されます。\nよろしいですか？</string>
    <string name="rk_no_rec">記録なし</string>
    <string name="ml_send_fin">送信済み</string>
    <string name="tib_new_reg">新規登録する</string>
    <string name="tib_check_ID">CheckId!</string>
    <string name="game_Stride">歩幅</string>
    <string name="gm_move_distance">移動距離</string>
</resources>