<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TagSet">

    <TextView
        android:id="@+id/tg_textView_roomLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tg_roomName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.1" />

    <EditText
        android:id="@+id/tg_plainText_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tg_textView_roomLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/tg_textView_gameMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tg_gameMode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintHorizontal_bias="0.1" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/tg_radioGroup_game"
        app:layout_constraintTop_toBottomOf="@id/tg_textView_gameMode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.1">

        <RadioButton
            android:id="@+id/tg_radioButton_battle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tg_battle" />

        <RadioButton
            android:id="@+id/tg_radioButton_cooperation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tg_cooperation" />
    </RadioGroup>

    <TextView
        android:id="@+id/tg_textView_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tg_statusEffect"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0.1" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/tg_radioGroup_status"
        app:layout_constraintTop_toBottomOf="@id/tg_textView_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.1">

        <RadioButton
            android:id="@+id/tg_radioButton_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tg_on" />

        <RadioButton
            android:id="@+id/tg_radioButton_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tg_off" />
    </RadioGroup>

    <TextView
        android:id="@+id/tg_textView_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tg_member"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:layout_constraintHorizontal_bias="0.1" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/tg_radioGroup_member"
        app:layout_constraintTop_toBottomOf="@id/tg_textView_member"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.1">

        <RadioButton
            android:id="@+id/tg_radioButton_known"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tg_known" />

        <RadioButton
            android:id="@+id/tg_radioButton_unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tg_unknown" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/tg_imageButton_gameMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        app:srcCompat="@drawable/question_icon_32"
        app:layout_constraintTop_toTopOf="@id/tg_radioGroup_game"
        app:layout_constraintBottom_toBottomOf="@id/tg_radioGroup_game"
        app:layout_constraintStart_toEndOf="@id/tg_radioGroup_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"/>

    <ImageButton
        android:id="@+id/tg_imageButton_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        app:srcCompat="@drawable/question_icon_32"
        app:layout_constraintTop_toTopOf="@id/tg_radioGroup_status"
        app:layout_constraintBottom_toBottomOf="@id/tg_radioGroup_status"
        app:layout_constraintStart_toEndOf="@id/tg_radioGroup_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"/>

    <Button
        android:id="@+id/tg_button_create"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/tg_create"
        android:backgroundTint="@color/light_blue"
        android:autoSizeTextType="uniform"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.08"/>

</androidx.constraintlayout.widget.ConstraintLayout>